--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_swiper : 
   rxdart: ^0.27.0
   url_launcher: ^6.0.4
+  provider: ^5.0.0
+  flutter_map: ^0.12.0
   http:
 
 dev_dependencies:
