--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_swiper : 
   rxdart: ^0.27.0
   url_launcher: ^6.0.4
+  webview_flutter: ^2.0.8
   provider: ^5.0.0
   flutter_map: ^0.12.0
   share: ^2.0.4
@@ -54,7 +55,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/
-   - assets/home/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
