--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -35,6 +33,8 @@ dependencies:
   provider: ^5.0.0
   flutter_map: ^0.12.0
   share: ^2.0.4
+  panorama: ^0.4.1
+  image_picker: ^0.8.0+3
   http:
 
 dev_dependencies:
@@ -54,7 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/
+   - assets/ 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
