--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,9 @@ dependencies:
   url_launcher: ^6.0.4
   webview_flutter: ^2.0.8
   provider: ^5.0.0
+  flutter_staggered_grid_view: ^0.4.0
   flutter_map: ^0.12.0
   share: ^2.0.4
-  panorama: ^0.4.1
-  image_picker: ^0.8.0+3
   http:
 
 dev_dependencies:
