--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   flutter_map: ^0.12.0
   share: ^2.0.4
+  shared_preferences: ^2.0.6
   http:
 
 dev_dependencies:
